updated alignment, img size, and fixed errors

--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,12 @@
 
 body {
     font-size: 25px;
-    text-align: center;
     font-family: 'Muli', sans-serif;
     margin: 0;
+}
+
+h2, h3, section {
+    text-align: center;
 }
 
 /* Page Reset End */
@@ -27,6 +30,7 @@ nav {
     right: 0;
     z-index: 10;
     display: flex;
+    flex-direction: column;
 }
 
 nav p {
@@ -49,7 +53,7 @@ ul {
 li {
     display: inline;
     border-right: 2px solid white;
-    font-size: 75%;
+    font-size: 90%;
     padding-right: 5px;
     color: white;
 }
@@ -83,7 +87,7 @@ p {
 section {    
     width: 100%;
     min-height: 200px;
-    background-color: #1a1a1d;
+    background-color: black;
     padding: 2%;
     color: white;
 }
@@ -116,7 +120,7 @@ h2, section a {
 }
 
 h3 {
-    color: #4e4e50;
+    color: white;
 }
 
 .white {
@@ -134,6 +138,7 @@ h3 {
     padding: 0 10px;
     margin: 0;
     line-height: 150%;
+    text-align: left;
 }
 
 .emphasise {
@@ -148,17 +153,22 @@ h3 {
     padding: 15px;
 }
 
+.links {
+    padding-top: 90px;
+}
+
 /* Main End */
 
-@media screen and (max-width: 800px){
-    nav {        
-        flex-direction: column;
-    }
+@media screen and (min-width: 400px){
+    .projImg {
+        height: 300px;
+    } 
 }
 
 @media screen and (min-width: 800px){
     nav {
         justify-content: space-evenly;
+        flex-direction: row;
     }
     
     nav ul{
@@ -175,5 +185,13 @@ h3 {
 
     #about p, #projects p {
         padding: 0 15%;
+    }
+
+    .links {
+        padding-top: 30px;
+    } 
+
+    .projImg {
+        height: 400px;
     }
 }
